--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-livereload-client",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publishConfig": {
     "access": "public"
   },
@@ -41,7 +41,8 @@
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-html": "^0.2.0",
-    "ava": "^3.12.1",
+    "ava": "^3.13.0",
+    "mock-fs": "^4.13.0",
     "prettier": "^2.1.2",
     "rollup": "^2.28.2"
   }
